@@ -8,6 +8,8 @@ Zope Changes
 
     Bugs fixed
 
+      - The REQUEST no longer accepts holds after it has been closed.
+
       - Collector #1441: WebDAV compatibility with Windows Web Folders
         restored by adding a configuration variable that controls the
         sending of the non-standard MS-Author-Via and Public
